{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 232,
  "lineage": "3d18a2fa-22c5-d059-1f42-d7592805e2dc",
  "resources": [
    {
      "module": "module.demo_root",
      "mode": "data",
      "type": "aws_instance",
      "name": "cicd_instance_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-08a706ba5ea257141",
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:instance/i-082e16baf0928186e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-082e16baf0928186e",
            "instance_id": "i-082e16baf0928186e",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "dev-infra-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0897dd835e6f10ea7",
            "placement_partition_number": 0,
            "private_dns": "ip-172-20-10-210.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.210",
            "public_dns": "ec2-18-182-6-9.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.6.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e13c7b6da6a38e16",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7089d6a57b239e8",
            "tags": {
              "Name": "dev-cicd-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7a5ce89e2d06da0"
            ]
          }
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ALB egress rule",
            "from_port": 0,
            "id": "sgrule-1020397208",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-072664e217c2e9467",
            "security_group_rule_id": "sgr-00c4055be4cc00d03",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.load_balancer.aws_security_group.lb_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ALB Ingress rule for HTTP",
            "from_port": 80,
            "id": "sgrule-1599157990",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072664e217c2e9467",
            "security_group_rule_id": "sgr-070356db2ac8c4502",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.load_balancer.aws_security_group.lb_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cicd_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "CICD Instance egress rule",
            "from_port": 0,
            "id": "sgrule-3753290599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c7a5ce89e2d06da0",
            "security_group_rule_id": "sgr-00bd772f7f7bbbbf9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.cicd_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cicd_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "CICD Ingress rule for HTTP",
            "from_port": 80,
            "id": "sgrule-2742514413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7a5ce89e2d06da0",
            "security_group_rule_id": "sgr-08f6c3308dd434fb4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.cicd_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cicd_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "CICD Ingress rule for SSH",
            "from_port": 22,
            "id": "sgrule-368914264",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7a5ce89e2d06da0",
            "security_group_rule_id": "sgr-07531006c0963cb11",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.cicd_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cicd_ingress_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "CICD Instance Ingress rule for 8080",
            "from_port": 8080,
            "id": "sgrule-2315015212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7a5ce89e2d06da0",
            "security_group_rule_id": "sgr-0b2097c9e8445368d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.cicd_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "host_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Host Instance egress rule",
            "from_port": 0,
            "id": "sgrule-2249353418",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07ef5f649903f6842",
            "security_group_rule_id": "sgr-0a07b99b0312a1a24",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.host_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "host_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "For host to receive traffic from CICD Instance",
            "from_port": 80,
            "id": "sgrule-883781892",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ef5f649903f6842",
            "security_group_rule_id": "sgr-0a2082310768da8f0",
            "self": false,
            "source_security_group_id": "sg-072664e217c2e9467",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.host_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.load_balancer.aws_security_group.lb_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "host_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.20.10.210/32"
            ],
            "description": "Ingress rule for CICD instance to ssh into the Host instance",
            "from_port": 22,
            "id": "sgrule-2803807514",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ef5f649903f6842",
            "security_group_rule_id": "sgr-0a4a7daa40471a428",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.data.aws_instance.cicd_instance_data",
            "module.demo_root.module.cicd_instance.aws_instance.ec2_instance",
            "module.demo_root.module.cicd_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.cicd_instance.data.aws_key_pair.instance_key",
            "module.demo_root.module.host_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "host_ingress_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "For host to receive traffic from CICD Instance",
            "from_port": 8080,
            "id": "sgrule-2542552286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ef5f649903f6842",
            "security_group_rule_id": "sgr-0ca77ae941290f54b",
            "self": false,
            "source_security_group_id": "sg-072664e217c2e9467",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.host_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.load_balancer.aws_security_group.lb_sg",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.cicd_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a706ba5ea257141",
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:instance/i-082e16baf0928186e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082e16baf0928186e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0897dd835e6f10ea7",
            "private_dns": "ip-172-20-10-210.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.210",
            "public_dns": "ec2-18-182-6-9.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.6.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e13c7b6da6a38e16",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7089d6a57b239e8",
            "tags": {
              "Name": "dev-cicd-instance"
            },
            "tags_all": {
              "Name": "dev-cicd-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7a5ce89e2d06da0"
            ]
          },
          "dependencies": [
            "module.demo_root.module.cicd_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.cicd_instance.data.aws_key_pair.instance_key",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.cicd_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:security-group/sg-0c7a5ce89e2d06da0",
            "description": "Security group created for dev cicd instance",
            "egress": [],
            "id": "sg-0c7a5ce89e2d06da0",
            "ingress": [],
            "name": "dev-cicd-instance-sg",
            "name_prefix": "",
            "owner_id": "373686833855",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.host_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a706ba5ea257141",
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:instance/i-07c3e675c7ac4beed",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c3e675c7ac4beed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5301e1082304d40",
            "private_dns": "ip-172-20-20-155.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.20.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da1dd38f313ef6f0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a83f7990e86dc9f",
            "tags": {
              "Name": "dev-host-instance"
            },
            "tags_all": {
              "Name": "dev-host-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ef5f649903f6842"
            ]
          },
          "dependencies": [
            "module.demo_root.module.host_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.host_instance.data.aws_key_pair.instance_key",
            "module.demo_root.module.vpc.aws_subnet.private",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.host_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:security-group/sg-07ef5f649903f6842",
            "description": "Security group created for dev host instance",
            "egress": [],
            "id": "sg-07ef5f649903f6842",
            "ingress": [],
            "name": "dev-host-instance-sg",
            "name_prefix": "",
            "owner_id": "373686833855",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:loadbalancer/app/dev-alb/c18c60c0888d5802",
            "arn_suffix": "app/dev-alb/c18c60c0888d5802",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-361466674.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:loadbalancer/app/dev-alb/c18c60c0888d5802",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-072664e217c2e9467"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c84c5a368b010d80"
              },
              {
                "subnet_id": "subnet-0d7089d6a57b239e8"
              }
            ],
            "subnets": [
              "subnet-0c84c5a368b010d80",
              "subnet-0d7089d6a57b239e8"
            ],
            "vpc_id": "vpc-00465c0e1fe19eb42",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.demo_root.module.load_balancer.aws_security_group.lb_sg",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:listener/app/dev-alb/c18c60c0888d5802/67c72735c1a5163f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:targetgroup/dev-alb-tg/43511be817b2215b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:listener/app/dev-alb/c18c60c0888d5802/67c72735c1a5163f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:loadbalancer/app/dev-alb/c18c60c0888d5802",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.load_balancer.aws_lb.alb",
            "module.demo_root.module.load_balancer.aws_lb_target_group.alb_tg",
            "module.demo_root.module.load_balancer.aws_security_group.lb_sg",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:targetgroup/dev-alb-tg/43511be817b2215b",
            "arn_suffix": "targetgroup/dev-alb-tg/43511be817b2215b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:targetgroup/dev-alb-tg/43511be817b2215b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg_attach_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:targetgroup/dev-alb-tg/43511be817b2215b-20231015181135086400000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:373686833855:targetgroup/dev-alb-tg/43511be817b2215b",
            "target_id": "i-07c3e675c7ac4beed"
          },
          "dependencies": [
            "module.demo_root.module.host_instance.aws_instance.ec2_instance",
            "module.demo_root.module.host_instance.aws_security_group.ec2_sg",
            "module.demo_root.module.host_instance.data.aws_key_pair.instance_key",
            "module.demo_root.module.load_balancer.aws_lb_target_group.alb_tg",
            "module.demo_root.module.vpc.aws_subnet.private",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:security-group/sg-072664e217c2e9467",
            "description": "Security group created for dev ALB",
            "egress": [],
            "id": "sg-072664e217c2e9467",
            "ingress": [],
            "name": "dev-alb-sg",
            "name_prefix": "",
            "owner_id": "373686833855",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1c0d88398c3ca11",
            "domain": "vpc",
            "id": "eipalloc-0d1c0d88398c3ca11",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-72-241-210.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.72.241.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_internet_gateway.internet_gateway",
            "module.demo_root.module.vpc.aws_route_table.public",
            "module.demo_root.module.vpc.aws_route_table_association.public",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:internet-gateway/igw-009d9200643821539",
            "id": "igw-009d9200643821539",
            "owner_id": "373686833855",
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1c0d88398c3ca11",
            "association_id": "eipassoc-0ee2fa8d743bbb5c0",
            "connectivity_type": "public",
            "id": "nat-033c03a84b36a874e",
            "network_interface_id": "eni-0809bc46b87e32634",
            "private_ip": "172.20.10.13",
            "public_ip": "35.72.241.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7089d6a57b239e8"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_eip.nat",
            "module.demo_root.module.vpc.aws_internet_gateway.internet_gateway",
            "module.demo_root.module.vpc.aws_route_table.public",
            "module.demo_root.module.vpc.aws_route_table_association.public",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:route-table/rtb-0c667bf0449dca185",
            "id": "rtb-0c667bf0449dca185",
            "owner_id": "373686833855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-033c03a84b36a874e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.vpc.aws_eip.nat",
            "module.demo_root.module.vpc.aws_internet_gateway.internet_gateway",
            "module.demo_root.module.vpc.aws_nat_gateway.nat_gw",
            "module.demo_root.module.vpc.aws_route_table.public",
            "module.demo_root.module.vpc.aws_route_table_association.public",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:route-table/rtb-07b036af3ba93ebb1",
            "id": "rtb-07b036af3ba93ebb1",
            "owner_id": "373686833855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009d9200643821539",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_root.module.vpc.aws_internet_gateway.internet_gateway",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a55ce70ce6d23d1",
            "route_table_id": "rtb-0c667bf0449dca185",
            "subnet_id": "subnet-06a83f7990e86dc9f"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_eip.nat",
            "module.demo_root.module.vpc.aws_internet_gateway.internet_gateway",
            "module.demo_root.module.vpc.aws_nat_gateway.nat_gw",
            "module.demo_root.module.vpc.aws_route_table.private_nat",
            "module.demo_root.module.vpc.aws_route_table.public",
            "module.demo_root.module.vpc.aws_route_table_association.public",
            "module.demo_root.module.vpc.aws_subnet.private",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c41e8e795cba467c",
            "route_table_id": "rtb-07b036af3ba93ebb1",
            "subnet_id": "subnet-0d7089d6a57b239e8"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_internet_gateway.internet_gateway",
            "module.demo_root.module.vpc.aws_route_table.public",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b09dd0d0b365c203",
            "route_table_id": "rtb-07b036af3ba93ebb1",
            "subnet_id": "subnet-0c84c5a368b010d80"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_internet_gateway.internet_gateway",
            "module.demo_root.module.vpc.aws_route_table.public",
            "module.demo_root.module.vpc.aws_subnet.public",
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:subnet/subnet-06a83f7990e86dc9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.20.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a83f7990e86dc9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373686833855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:subnet/subnet-0d7089d6a57b239e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7089d6a57b239e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373686833855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:subnet/subnet-0c84c5a368b010d80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.20.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c84c5a368b010d80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373686833855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00465c0e1fe19eb42"
          },
          "dependencies": [
            "module.demo_root.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.demo_root.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:373686833855:vpc/vpc-00465c0e1fe19eb42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0d55b08380650fb26",
            "default_route_table_id": "rtb-018339bac24c78740",
            "default_security_group_id": "sg-074301ebbb29df3cb",
            "dhcp_options_id": "dopt-0c8e3904938b646dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00465c0e1fe19eb42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018339bac24c78740",
            "owner_id": "373686833855",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}